# MyChat

./: README.md
Server/GateServer/: .gitignore  CMakeLists.txt  build.ps1  cofig.ini  config.ini  run.ps1
Server/GateServer/proto/: message.proto
Server/GateServer/src/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  MySqlDao.cpp  MySqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.h  const.h  main.cpp
Server/StatusServer/: .gitignore  CMakeLists.txt  config.ini
Server/StatusServer/proto/: message.proto
Server/StatusServer/src/: ConfigMgr.h  StatusServiceImpl.cpp  const.h  main.cpp
Server/VerifyServer/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js
src/: HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  const.h  main.cpp
